# robotDevastation

./: .appveyor.yml  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  AUTHORS.md  AudioManager_8hpp_source.html  CMakeLists.txt  CONTRIBUTING.md  DeadScreen_8hpp_source.html  DeadState_8hpp_source.html  GameScreen_8hpp_source.html  GameState_8hpp_source.html  GameStatesLib_2LogComponent_8hpp_source.html  ImageEventListener_8hpp_source.html  ImageLib_2LogComponent_8hpp_source.html  ImageManager_8hpp_source.html  InitScreen_8hpp_source.html  InitState_8hpp_source.html  InputEventListener_8hpp_source.html  InputLib_2LogComponent_8hpp_source.html  InputManager_8hpp_source.html  Key_8hpp_source.html  LICENSE  ManagerHub_8hpp_source.html  MentalMapEventListener_8hpp_source.html  MentalMapLib_2LogComponent_8hpp_source.html  MentalMap_8hpp_source.html  MockAudioManager_8hpp_source.html  MockImageEventListener_8hpp_source.html  MockImageManager_8hpp_source.html  MockInputEventListener_8hpp_source.html  MockInputManager_8hpp_source.html  MockNetworkEventListener_8hpp_source.html  MockNetworkManager_8hpp_source.html  MockRobotManager_8hpp_source.html  MockScreen_8hpp_source.html  MockState_8hpp_source.html  MusicLib_2LogComponent_8hpp_source.html  NetworkEventListener_8hpp_source.html  (+282 more)
doc/: CMakeLists.txt  Class Diagram.dia  Doxyfile  README.md  StateMachine.dia  StateMachineFlow.dia  groups.dox  install_cmake_on_ubuntu_14_10.dox  install_on_ubuntu.dox  install_opencv_on_ubuntu_14_10.dox  install_yarp_on_ubuntu_14_10.dox  install_zbar_on_ubuntu_14_10.dox  main.dox  post_install.dox  rd_environment_variables.dox  rd_install_cmake_on_ubuntu_14_10.dox  rd_install_on_ubuntu_14_10.dox  rd_install_opencv_on_ubuntu_14_10.dox  rd_install_sdl_on_ubuntu_14_10.dox  rd_install_yarp_on_ubuntu_14_10.dox  rd_install_zbar_on_ubuntu_14_10.dox  rd_post_install.dox
robots/PiYarp/emptybot/: CMakeLists.txt  EmptyBot.cpp  EmptyBot.hpp  IDeviceImpl.cpp  IEncoderImpl.cpp  IPositionImpl.cpp  IVelocityImpl.cpp
robots/PiYarp/pwmbot/: CMakeLists.txt  IDeviceImpl.cpp  IEncoderImpl.cpp  IPositionImpl.cpp  IVelocityImpl.cpp  PwmBot.cpp  PwmBot.hpp  pwm.cpp  pwm.hpp
robots/rpiNano/rpi/: CMakeLists.txt  README.txt
share/: CMakeLists.txt
share/fonts/: CMakeLists.txt
share/images/: CMakeLists.txt  test_frame.ppm  test_frame_qr.ppm  test_frame_qr_centered.ppm  test_target.ppm  test_target.xcf  test_target_bad.ppm
share/rdClient/conf/: keyboard.ini  rdClient.ini  sample.ini
share/robotDevastation/: CMakeLists.txt
share/robotDevastation/conf/: robotDevastation.ini
share/scripts/: update-dox.sh
share/sounds/: CMakeLists.txt
src/libraries/: CMakeLists.txt  stash.txt
src/libraries/GameStatesLib/: CMakeLists.txt  DeadState.cpp  DeadState.hpp  GameState.cpp  GameState.hpp  InitState.cpp  InitState.hpp  LogComponent.cpp  LogComponent.hpp
src/libraries/ImageLib/: CMakeLists.txt  ImageEventListener.hpp  ImageManager.cpp  ImageManager.hpp  LogComponent.cpp  LogComponent.hpp  MockImageEventListener.cpp  MockImageEventListener.hpp  MockImageManager.cpp  MockImageManager.hpp  MockupImageEventListener.cpp  MockupImageEventListener.hpp  MockupImageManager.cpp  MockupImageManager.hpp  ProcessorImageEventListener.cpp  ProcessorImageEventListener.hpp  RdImageEventListener.hpp  RdImageManager.cpp  RdMockupImageEventListener.hpp  RdMockupImageManager.cpp  RdProcessorImageEventListener.cpp  RdProcessorImageEventListener.hpp  RdYarpImageManager.cpp  RdYarpImageManager.hpp  YarpImageManager.cpp  YarpImageManager.hpp  YarpLocalImageManager.cpp  YarpLocalImageManager.hpp
src/libraries/InputLib/: CMakeLists.txt  InputEventListener.hpp  InputManager.cpp  InputManager.hpp  Key.cpp  Key.hpp  LogComponent.cpp  LogComponent.hpp  MockInputEventListener.cpp  MockInputEventListener.hpp  MockInputManager.cpp  MockInputManager.hpp  MockupInputEventListener.cpp  MockupInputEventListener.hpp  MockupInputManager.cpp  MockupInputManager.hpp  RdInputManager.cpp  RdKey.cpp  RdSDLEventFactory.cpp  RdSDLEventFactory.hpp  RdSDLInputManager.cpp  RdSDLInputManager.hpp  SDLEventFactory.cpp  SDLEventFactory.hpp  SDLInputManager.cpp  SDLInputManager.hpp  WindowEvent.cpp  WindowEvent.hpp
src/libraries/MentalMapLib/: CMakeLists.txt  LogComponent.cpp  LogComponent.hpp  MentalMap.cpp  MentalMap.hpp  MentalMapEventListener.hpp  Player.cpp  Player.hpp  RdMentalMapEventListener.hpp  RdPlayer.hpp  RdTarget.cpp  RdTarget.hpp  Target.cpp  Target.hpp  Weapon.cpp  Weapon.hpp
src/libraries/MusicLib/: AudioManager.cpp  AudioManager.hpp  CMakeLists.txt  LogComponent.cpp  LogComponent.hpp  MockAudioManager.cpp  (+5 more)
test/: CMakeLists.txt  RdAudioManagerTest.cpp  testDeadScreen.cpp  testDeadState.cpp  testFSM.cpp  testFSMBuilder.cpp  testGameScreen.cpp  testGameState.cpp  testHUD.cpp  testInitScreen.cpp  testInitState.cpp  testInputManager.cpp  testLoadSharedLibraries.cpp  testMentalMap.cpp  testMockAudioManager.cpp  testMockImageManager.cpp  testMockInputManager.cpp  testMockNetworkManager.cpp  testMockRobotManager.cpp  testMockScreen.cpp  testMockupAudioManager.cpp  testMockupImageManager.cpp  testMockupInputManager.cpp  testMockupNetworkManager.cpp  testMockupRobotManager.cpp  testMockupScreen.cpp  testProcessorImageEventListener.cpp  testRdAudioManager.cpp  testRdImageManager.cpp  testRdInputManager.cpp  testRdMockupImageManager.cpp  testRdMockupRobotManager.cpp  testRdProcessorImageEventListener.cpp  testRdYarpImageManager.cpp  testRdYarpNetworkManager.cpp  testRobotDevastation.cpp  testSDLAudioManager.cpp  testSDLScreenManager.cpp  testSDLTextDisplay.cpp  testYarpImageManager.cpp  (+1 more)
tests/: CMakeLists.txt  testDeadScreen.cpp  testDeadState.cpp  testFSM.cpp  testFSMBuilder.cpp  testGameScreen.cpp  testGameState.cpp  testInitScreen.cpp  testInitState.cpp  testInputManager.cpp  testMentalMap.cpp  testMockAudioManager.cpp  testMockNetworkManager.cpp  testMockRobotManager.cpp  testMockScreen.cpp  testProcessorImageEventListener.cpp  testRobotDevastation.cpp  testSDLScreenManager.cpp  testSDLTextDisplay.cpp  testYarpImageManager.cpp  testYarpNetworkManager.cpp
(+459 files in other folders)
