# Authors: see AUTHORS.md at project root.
# CopyPolicy: released under the terms of the LGPLv2.1, see LICENSE at project root.
# URL: https://github.com/asrob-uc3m/robotDevastation

### Go through directories

add_subdirectory(robotDevastation)
add_subdirectory(images)
add_subdirectory(sounds)
add_subdirectory(fonts)
